# online_shop

./: LICENSE  README.md
backend/: pyproject.toml
backend/api/: serializers.py  urls.py  views.py
backend/goods/: admin.py  apps.py  models.py
backend/goods/migrations/: 0001_initial.py
backend/online_shop/: settings.py  swagger.py  urls.py
